--- a/Linear_Algebra_notes.ipynb
+++ b/Linear_Algebra_notes.ipynb
@@ -37,28 +37,55 @@
     "$3 \\cdot x = 3$ ---Solvable. Unique solution. <br />\n",
     "$0 \\cdot x = 3$ ---Solvable. Unsolvable.\n",
     "\n",
-    "\n"
+    "***\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "this is a test file\n"
-     ]
-    }
-   ],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "x = 'this is a test file'\n",
-    "print(x)"
+    "### Property of Gaussian Elimination\n",
+    "- Gaussian elimination doesn't change the Null Space\n",
+    "- Gaussian elimination will change the Column Space\n",
+    "\n",
+    "For Example:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Consider this matrix\n",
+    "$$A =\n",
+    "\\begin{bmatrix}\n",
+    "    10 & 2 & 14 & 20 & 8 \\\\\n",
+    "    3 & 5 & 23 & 6 & -2 \\\\\n",
+    "    13 & 7 & 27 & 26 & 6 \\\\ \n",
+    "\\end{bmatrix} \\qquad\n",
+    "A\\_Column\\_Space=\n",
+    "\\begin{bmatrix}\n",
+    "    a \\\\\n",
+    "    b \\\\\n",
+    "    a+b \\\\ \n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "<br />\n",
+    "After Guassian elimination, the matrix is\n",
+    "$$ A\\_G\\_Elim = \n",
+    "\\begin{bmatrix}\n",
+    "    1 & 0 & 1 & 2 & 1 \\\\\n",
+    "    0 & 1 & 2 & 0 & -1 \\\\\n",
+    "    0 & 0 & 0 & 0 & 0 \n",
+    "\\end{bmatrix}\\qquad\n",
+    "Column\\_Space = \n",
+    "\\begin{bmatrix}\n",
+    "    a \\\\\n",
+    "    b \\\\\n",
+    "    0 \\\\ \n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "The column space is changed"
    ]
   }
  ],
