--- a/Linear_Algebra_notes.ipynb
+++ b/Linear_Algebra_notes.ipynb
@@ -85,8 +85,446 @@
     "\\end{bmatrix}\n",
     "$$\n",
     "\n",
-    "The column space is changed"
+    "The column space is changed\n",
+    "\n",
+    "***"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Understanding the Row Reduced Echelon Form (RREF) \n",
+    "This RREF shows the following relationship very clearlyand directly: \n",
+    "$$\\#\\_of\\_columns=dim(Columns\\_Space)+dim(Null\\_Space)$$\n",
+    "\n",
+    "The columns in matrix $A$ can be divided into to types: <br \\>\n",
+    "__1. The columns linearly independent of the previouse columns__ <br \\>\n",
+    "This kind of columns contributes to the COLUMN space.\n",
+    "\n",
+    "__2. The columns linearly dependent of the previouse columns__ <br \\>\n",
+    "This kind of columns contributes to the NULL space.\n",
+    "\n",
+    "Example:\n",
+    "$$ A = \n",
+    "\\begin{bmatrix}\n",
+    "1 & 2 & 0 & 0 & 2 & 3 & 0 & 7 \\\\\n",
+    "0 & 0 & 0 & 1 & 3 & 4 & 0 & 8 \\\\\n",
+    "0 & 0 & 0 & 0 & 0 & 0 & 1 & 3 \\\\\n",
+    "0 & 0 & 0 & 0 & 0 & 0 & 1 & 0 \n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "> For matrix $A$, when we look for the null space, we only care about column 2, 3, 5, 6 and 8. Column 1, 4 and 7 span the column space. \n",
+    "So the dimension of its column space is 3, and the dimension of the null space is 5. the null space is:\n",
+    "$$ A\\_Null = \\alpha \\cdot\n",
+    "\\begin{bmatrix}\n",
+    "2 \\\\\n",
+    "-1 \\\\\n",
+    "0 \\\\\n",
+    "0 \\\\\n",
+    "0 \\\\\n",
+    "0 \\\\\n",
+    "0 \\\\\n",
+    "0 \\\\\n",
+    "\\end{bmatrix} \\quad\n",
+    "+ \\beta \\cdot\n",
+    "\\begin{bmatrix}\n",
+    "0 \\\\\n",
+    "0 \\\\\n",
+    "1 \\\\\n",
+    "0 \\\\\n",
+    "0 \\\\\n",
+    "0 \\\\\n",
+    "0 \\\\\n",
+    "0 \\\\\n",
+    "\\end{bmatrix} \\quad\n",
+    "+ \\gamma \\cdot\n",
+    "\\begin{bmatrix}\n",
+    "2 \\\\\n",
+    "0 \\\\\n",
+    "0 \\\\\n",
+    "3 \\\\\n",
+    "-1 \\\\\n",
+    "0 \\\\\n",
+    "0 \\\\\n",
+    "0 \\\\\n",
+    "\\end{bmatrix} \\quad\n",
+    "+ \\delta \\cdot\n",
+    "\\begin{bmatrix}\n",
+    "3 \\\\\n",
+    "0 \\\\\n",
+    "0 \\\\\n",
+    "4 \\\\\n",
+    "0 \\\\\n",
+    "-1 \\\\\n",
+    "0 \\\\\n",
+    "0 \\\\\n",
+    "\\end{bmatrix} \\quad\n",
+    "+ \\epsilon \\cdot\n",
+    "\\begin{bmatrix}\n",
+    "7 \\\\\n",
+    "0 \\\\\n",
+    "0 \\\\\n",
+    "8 \\\\\n",
+    "0 \\\\\n",
+    "0 \\\\\n",
+    "3 \\\\\n",
+    "-1 \\\\\n",
+    "\\end{bmatrix} \\quad\n",
+    "$$\n",
+    "\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Understanding Matrix Mulitplication\n",
+    "\n",
+    "Matrix multiplication is to find the linear combination of column vectors of the matrix in the left, specific to the coefficients in the matrix in the left. \n",
+    "\n",
+    "Example\n",
+    "$$\n",
+    "\\begin{bmatrix}\n",
+    "2 & 3 & 1 \\\\\n",
+    "4 & 4 & 2 \\\\\n",
+    "1 & 2 & 1 \\\\\n",
+    "\\end{bmatrix}\n",
+    "\\cdot\n",
+    "\\begin{bmatrix}\n",
+    "3 \\\\\n",
+    "2 \\\\\n",
+    "2\\\\\n",
+    "\\end{bmatrix}\n",
+    "=\n",
+    "3 \\cdot \n",
+    "\\begin{bmatrix}\n",
+    "2 \\\\\n",
+    "4 \\\\\n",
+    "1 \\\\\n",
+    "\\end{bmatrix}\n",
+    "+ 2 \\cdot \n",
+    "\\begin{bmatrix}\n",
+    "3 \\\\\n",
+    "4 \\\\\n",
+    "2 \\\\\n",
+    "\\end{bmatrix}\n",
+    "+ 2 \\cdot\n",
+    "\\begin{bmatrix}\n",
+    "1 \\\\\n",
+    "2 \\\\\n",
+    "1 \\\\\n",
+    "\\end{bmatrix}\n",
+    "=\n",
+    "\\begin{bmatrix}\n",
+    "14 \\\\\n",
+    "24 \\\\\n",
+    "9 \\\\\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "That is to say, if we have a vector which is \n",
+    "$\n",
+    "\\begin{bmatrix}\n",
+    "3 \\\\\n",
+    "2 \\\\\n",
+    "2 \\\\\n",
+    "\\end{bmatrix}\n",
+    "$\n",
+    "in the coordinates system of \n",
+    "$\n",
+    "\\Bigg(\n",
+    "\\begin{bmatrix}\n",
+    "2 \\\\\n",
+    "4 \\\\\n",
+    "1 \\\\\n",
+    "\\end{bmatrix},\n",
+    "\\begin{bmatrix}\n",
+    "3 \\\\\n",
+    "4 \\\\\n",
+    "2 \\\\\n",
+    "\\end{bmatrix},\n",
+    "\\begin{bmatrix}\n",
+    "1 \\\\\n",
+    "2 \\\\\n",
+    "1 \\\\\n",
+    "\\end{bmatrix}\n",
+    "\\Bigg)\n",
+    "$. \n",
+    "If we want to express it in the common coordinate system \n",
+    "$\n",
+    "\\Bigg(\n",
+    "\\begin{bmatrix}\n",
+    "1 \\\\\n",
+    "0 \\\\\n",
+    "0 \\\\\n",
+    "\\end{bmatrix},\n",
+    "\\begin{bmatrix}\n",
+    "0 \\\\\n",
+    "1 \\\\\n",
+    "0 \\\\\n",
+    "\\end{bmatrix},\n",
+    "\\begin{bmatrix}\n",
+    "0 \\\\\n",
+    "0 \\\\\n",
+    "1 \\\\\n",
+    "\\end{bmatrix}\n",
+    "\\Bigg)\n",
+    "$,\n",
+    "it would be \n",
+    "$\n",
+    "\\begin{bmatrix}\n",
+    "14 \\\\\n",
+    "24 \\\\\n",
+    "9 \\\\\n",
+    "\\end{bmatrix}\n",
+    "$.\n",
+    "\n",
+    "#### Row perspective\n",
+    "$$\n",
+    "\\begin{bmatrix}\n",
+    "1 & 2 & 1 \\\\\n",
+    "\\end{bmatrix}\n",
+    "\\cdot\n",
+    "\\begin{bmatrix}\n",
+    "2 & 2 & 1 \\\\\n",
+    "3 & 1 & 1 \\\\\n",
+    "3 & 1 & 2 \\\\\n",
+    "\\end{bmatrix}\n",
+    "= 1 \\cdot \n",
+    "\\begin{bmatrix}\n",
+    "2 & 2 & 1 \\\\\n",
+    "\\end{bmatrix}\n",
+    "+ 2 \\cdot\n",
+    "\\begin{bmatrix}\n",
+    "3 & 1 & 1 \\\\\n",
+    "\\end{bmatrix}\n",
+    "+ 1 \\cdot \n",
+    "\\begin{bmatrix}\n",
+    "3 & 1 & 2 \\\\\n",
+    "\\end{bmatrix}\n",
+    "=\n",
+    "\\begin{bmatrix}\n",
+    "11 & 5 & 5 \\\\\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If we have $A \\cdot B = C$ ($A$, $B$ and $C$ are matrices), we have the following relationship:\n",
+    "$$R_A \\supseteq R_C$$\n",
+    "$$N_B \\subseteq N_C$$\n",
+    "i.e. <br \\>\n",
+    "The column space of $C$ is a subspace of the column space of $A$. <br \\>\n",
+    "The null space of $B$ is a subspace of the null space of $C$.\n",
+    "\n",
+    "#### Invere and Transpose\n",
+    "\n",
+    "$(A \\cdot B)^{-1} = B^{-1} \\cdot A^{-1}$ (if $A$ and $B$ are invertable) <br \\>\n",
+    "$(A \\cdot B)^{T} = B^{T} \\cdot A^{T}$ <br \\>\n",
+    "$A^{T} \\cdot A$ is symetric: $(A^{T} \\cdot A)^{T} = A^{T} \\cdot (A^{T})^{T} = A^{T} \\cdot A$\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The effect of Elementary Matrix in Matrix Multiplication\n",
+    "\n",
+    "When the elementary matrix appears on the left, it works on the rows. When it appears on the right, it works on the columns.\n",
+    "Example:\n",
+    "$$\n",
+    "\\begin{bmatrix}\n",
+    "a & b & c \\\\\n",
+    "d & e & f \\\\\n",
+    "g & h & i \\\\\n",
+    "\\end{bmatrix}\n",
+    "\\cdot\n",
+    "\\begin{bmatrix}\n",
+    "1 & 0 & 0 \\\\\n",
+    "2 & 1 & 0 \\\\\n",
+    "0 & 0 & 1 \\\\\n",
+    "\\end{bmatrix}\n",
+    "=\n",
+    "\\begin{bmatrix}\n",
+    "a+2b & b & c \\\\\n",
+    "d+2e & e & f \\\\\n",
+    "g+2h & h & i \\\\\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "<br \\>\n",
+    "$$\n",
+    "\\begin{bmatrix}\n",
+    "1 & 0 & 0 \\\\\n",
+    "2 & 1 & 0 \\\\\n",
+    "0 & 0 & 1 \\\\\n",
+    "\\end{bmatrix}\n",
+    "\\cdot\n",
+    "\\begin{bmatrix}\n",
+    "a & b & c \\\\\n",
+    "d & e & f \\\\\n",
+    "g & h & i \\\\\n",
+    "\\end{bmatrix}\n",
+    "=\n",
+    "\\begin{bmatrix}\n",
+    "a& b & c \\\\\n",
+    "d+2a & e+2b & f+2c \\\\\n",
+    "g & h & i \\\\\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### LU decomposition\n",
+    "To do a LU decompostion, we just record the Gaussian elimination procedure useing elementary matrices. \n",
+    "\n",
+    "Example: Consider the matrix\n",
+    "$\n",
+    "A=\n",
+    "\\begin{bmatrix}\n",
+    "1 & 2 & 3 \\\\\n",
+    "4 & 5 & 6 \\\\\n",
+    "7 & 8 & 10 \\\\\n",
+    "\\end{bmatrix}\n",
+    "$,\n",
+    "We want to get $A=LU$\n",
+    "<br />\n",
+    "<br />\n",
+    "$\n",
+    "\\begin{bmatrix}\n",
+    "1 & 0 & 0 \\\\\n",
+    "0 & 1 & 0 \\\\\n",
+    "0 & -2 & 1 \\\\\n",
+    "\\end{bmatrix}\n",
+    "\\cdot\n",
+    "\\begin{bmatrix}\n",
+    "1 & 0 & 0 \\\\\n",
+    "-4 & 1 & 0 \\\\\n",
+    "-7 & 0 & 1 \\\\\n",
+    "\\end{bmatrix}\n",
+    "\\cdot\n",
+    "\\begin{bmatrix}\n",
+    "1 & 2 & 3 \\\\\n",
+    "4 & 5 & 6 \\\\\n",
+    "7 & 8 & 10 \\\\\n",
+    "\\end{bmatrix}\n",
+    "=\n",
+    "\\begin{bmatrix}\n",
+    "1 & 2 & 3 \\\\\n",
+    "0 & -3 & -6 \\\\\n",
+    "0 & 0 & 1 \\\\\n",
+    "\\end{bmatrix}\n",
+    "$\n",
+    "<br />\n",
+    "<br />\n",
+    "Then \n",
+    "<br />\n",
+    "$\n",
+    "U=\n",
+    "\\begin{bmatrix}\n",
+    "1 & 2 & 3 \\\\\n",
+    "0 & -3 & -6 \\\\\n",
+    "0 & 0 & 1 \\\\\n",
+    "\\end{bmatrix} \\qquad \\quad\n",
+    "L=\n",
+    "\\Bigg(\n",
+    "\\begin{bmatrix}\n",
+    "1 & 0 & 0 \\\\\n",
+    "0 & 1 & 0 \\\\\n",
+    "0 & -2 & 1 \\\\\n",
+    "\\end{bmatrix}\n",
+    "\\cdot\n",
+    "\\begin{bmatrix}\n",
+    "1 & 0 & 0 \\\\\n",
+    "-4 & 1 & 0 \\\\\n",
+    "-7 & 0 & 1 \\\\\n",
+    "\\end{bmatrix}\n",
+    "\\Bigg)^{-1}\n",
+    "=\n",
+    "\\Bigg(\n",
+    "\\begin{bmatrix}\n",
+    "1 & 0 & 0 \\\\\n",
+    "-4 & 1 & 0 \\\\\n",
+    "-7 & 0 & 1 \\\\\n",
+    "\\end{bmatrix}\n",
+    "\\Bigg)^{-1}\n",
+    "\\cdot\n",
+    "\\Bigg(\n",
+    "\\begin{bmatrix}\n",
+    "1 & 0 & 0 \\\\\n",
+    "0 & 1 & 0 \\\\\n",
+    "0 & -2 & 1 \\\\\n",
+    "\\end{bmatrix}\n",
+    "\\Bigg)^{-1}\n",
+    "=\n",
+    "\\begin{bmatrix}\n",
+    "1 & 0 & 0 \\\\\n",
+    "4 & 1 & 0 \\\\\n",
+    "7 & 2 & 1 \\\\\n",
+    "\\end{bmatrix}\n",
+    "$\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.  0.  0.]\n",
+      " [ 4.  1.  0.]\n",
+      " [ 7.  2.  1.]]\n",
+      "[[  1.   2.   3.]\n",
+      " [  4.   5.   6.]\n",
+      " [  7.   8.  10.]]\n",
+      "[[  1.   2.   3.]\n",
+      " [  4.   5.   6.]\n",
+      " [  7.   8.  10.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Check the previous calculation\n",
+    "import numpy as np\n",
+    "U = np.matrix([[1,2,3],[0,-3,-6],[0,0,1]])\n",
+    "l_2 = np.matrix([[1,0,0],[-4,1,0],[-7,0,1]])\n",
+    "l_1 = np.matrix([[1,0,0], [0,1,0], [0,-2,1]])\n",
+    "L = l_2.getI()*l_1.getI()\n",
+    "print(L)\n",
+    "print(L*U)\n",
+    "\n",
+    "from scipy import linalg\n",
+    "A = np.array([[1,2,3],[4,5,6],[7,8,10]])\n",
+    "p, l, u = linalg.lu(A)\n",
+    "print(p.dot(l).dot(u))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
